--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.10.2",
+    "@babel/core": "7.24.4",
     "@types/d3": "^5.7.2",
     "babel": "^6.23.0",
     "babel-loader": "^8.1.0",
