--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.1.0",
     "d3": "^5.16.0",
+    "serialize-javascript": "^3.1.0",
     "ts-loader": "^7.0.5",
     "typescript": "^5.1.6",
     "uglifyjs-webpack-plugin": "^2.2.0",
